// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Create items  Converts an array of items to an object with the items properties and the idProperty as keys. 1`] = `
Object {
  "1": Object {
    "id": 1,
    "value": "one",
  },
  "2": Object {
    "id": 2,
    "value": "two",
  },
}
`;

exports[`Delete Item Deletes item with matching id property 1`] = `
Object {
  "1": Object {
    "id": 1,
    "value": "one",
  },
}
`;

exports[`Insert Item Insert an object into state with the key of the object being the value of the key property. 1`] = `
Object {
  "1": Object {
    "id": 1,
    "value": "one",
  },
  "2": Object {
    "id": 2,
    "value": "two",
  },
  "4": Object {
    "id": 4,
    "value": "four",
  },
}
`;

exports[`Update Item Updates item with matching id property 1`] = `
Object {
  "1": Object {
    "id": 1,
    "value": "one",
  },
  "2": Object {
    "id": 2,
    "value": "Newtwo",
  },
}
`;
